# Hedge-Edge-agentic

./: .env.example  .gitignore  README.md
.github/agents/: Analytics.agent.md  Community Manager.agent.md  Content Engine.agent.md  Finance.agent.md  Marketing.agent.md  Orchestrator.agent.md  Product.agent.md  Sales.agent.md
.github/copilot/: business-strategist.agent.md  business-strategist.chatmode.md
Analytics Agent/.agents/skills/ab-testing/: SKILL.md
Analytics Agent/.agents/skills/attribution-modeling/: SKILL.md
Analytics Agent/.agents/skills/cohort-analysis/: SKILL.md
Analytics Agent/.agents/skills/funnel-analytics/: SKILL.md
Analytics Agent/.agents/skills/kpi-dashboards/: SKILL.md
Analytics Agent/.agents/skills/reporting-automation/: SKILL.md
Business Strategist Agent/: .gitignore  SOP.md
Business Strategist Agent/.agents/skills/competitive-intelligence/: SKILL.md
Business Strategist Agent/.agents/skills/growth-strategy/: SKILL.md
Business Strategist Agent/.agents/skills/partnership-strategy/: SKILL.md
Business Strategist Agent/.agents/skills/prop-firm-market-research/: SKILL.md
Business Strategist Agent/.agents/skills/revenue-optimization/: SKILL.md
Business Strategist Agent/.agents/skills/sample-skill-1/: SKILL.md
Business Strategist Agent/.agents/skills/sample-skill-2/: SKILL.md
Business Strategist Agent/.agents/skills/strategic-planning/: SKILL.md
Business Strategist Agent/agents/: SKILLS.md
Business Strategist Agent/tmp/: .gitkeep
Community Manager Agent/.agents/skills/community-events/: SKILL.md
Community Manager Agent/.agents/skills/discord-management/: SKILL.md
Community Manager Agent/.agents/skills/feedback-collection/: SKILL.md
Community Manager Agent/.agents/skills/retention-engagement/: SKILL.md
Community Manager Agent/.agents/skills/support-triage/: SKILL.md
Community Manager Agent/.agents/skills/user-onboarding/: SKILL.md
Content Engine Agent/.agents/skills/content-creation/: SKILL.md
Content Engine Agent/.agents/skills/content-scheduling/: SKILL.md
Content Engine Agent/.agents/skills/instagram-management/: SKILL.md
Content Engine Agent/.agents/skills/linkedin-management/: SKILL.md
Content Engine Agent/.agents/skills/video-production/: SKILL.md
Content Engine Agent/.agents/skills/youtube-management/: SKILL.md
Context/: hedge-edge-business-context.md
Context/IB agreement/Hedge-Edge-Beta/: .gitignore  package-lock.json
Context/IB agreement/Hedge-Edge-Beta/Hedge-Edge-Back-end/: .dockerignore  .env.example  .env.production.example  .gitignore  API_DOCUMENTATION.md  BACKEND_SETUP_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  PROJECT_DOCUMENTATION.txt  license_api_production.py  license_api_server.py  mt5_api_server.py  railway.toml  render.yaml  requirements.production.txt  requirements.txt
Context/IB agreement/Hedge-Edge-Beta/Hedge-Edge-Back-end/agents/mt5/license-dll/: CMakeLists.txt  HedgeEdgeLicense.cpp  HedgeEdgeLicense.def  HedgeEdgeLicense.h  build_dll.ps1
Context/IB agreement/Hedge-Edge-Beta/Hedge-Edge-Front-end/: .env.desktop.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
Context/IB agreement/Hedge-Edge-Beta/docs/: ARCHITECTURE.md  Hedge-Edge-app.code-workspace  Production-Readiness-Tasks.html  README.md
Finance Agent/.agents/skills/expense-management/: SKILL.md
Finance Agent/.agents/skills/financial-reporting/: SKILL.md
Finance Agent/.agents/skills/ib-commission-tracking/: SKILL.md
Finance Agent/.agents/skills/invoicing/: SKILL.md
Finance Agent/.agents/skills/revenue-tracking/: SKILL.md
Finance Agent/.agents/skills/subscription-analytics/: SKILL.md
Marketing Agent/.agents/skills/ad-campaigns/: SKILL.md
Marketing Agent/.agents/skills/email-marketing/: SKILL.md
Marketing Agent/.agents/skills/landing-page-optimization/: SKILL.md
Marketing Agent/.agents/skills/lead-generation/: SKILL.md
Marketing Agent/.agents/skills/newsletter-management/: SKILL.md
Marketing Agent/.agents/skills/seo-strategy/: SKILL.md
(+190 files in other folders)
